# yamcs-mcp-server

./: .coveragerc  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  claude-desktop-config.json  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  run-server.sh  run-yamcs-mcp.py  run_server.py  test_server.py  yamcs-mcp-clean.sh  yamcs-mcp-wrapper.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  configuration.md  development.md  examples.md  index.md  installation.md  mcp-concepts.md  quickstart.md  sample-prompts.md  tools-overview.md  troubleshooting.md
docs/api/: components.md  server.md  servers.md
docs/components/: mdb.md
docs/servers/: alarms.md  mdb.md
docs/tools/: alarms.md  commands.md  instances.md  links.md  mdb.md  processors.md  storage.md
examples/: basic_usage.py
scripts/: debug-alarms.py  discover-link-attributes.py  test-alarms-server.py  test-integration.sh  test-link-attributes.py  test-link-status.py  test-processor-updates.py  test-with-yamcs.py
src/yamcs_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  types.py
src/yamcs_mcp/components/: __init__.py  archive.py  base.py  base_server.py  instances.py  links.py  mdb.py  processor.py  storage.py
src/yamcs_mcp/servers/: __init__.py  alarms.py  archive.py  base_server.py  commands.py  instances.py  links.py  mdb.py  processor.py  processors.py  storage.py
tests/: conftest.py  test_client.py  test_command_args_validation.py  test_integration.py  test_server.py
tests/components/: test_archive.py  test_base.py  test_base_server.py  test_instances.py  test_links.py  test_mdb.py  test_processor.py  test_storage.py
tests/servers/: __init__.py  test_base_server.py  test_commands_server.py  test_link_server.py  test_links_server.py  test_mdb_server.py
